# Naget_challenge

./: .gitignore  README.md  api_service.py  config.yaml  info_agent.py  main.py  pyproject.toml  requirements.txt  schema.py  vercel.json
docs/: architecture.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/: _agent-proxy.ts
frontend/app/api/health/: route.ts
frontend/app/api/research/: route.ts
frontend/app/api/research/stream/: route.ts
frontend/components/: results-panel.tsx  search-workspace.tsx
frontend/lib/: types.ts
output/information_agent/: latest_entities.json  latest_entities.md
prompts/: information_agent_prompt.py
tools/: fetch_url.py  intent_classificaiton.py  research_planner.py  web_search_tool.py  write_to_file.py
utils/: __init__.py  config.py  lightning.py  llm_utils.py  progress.py  recursive_research.py  result_utils.py  text_utils.py  tiered_research.py
